# ads-api-report-fetcher

./: .gitignore  .pre-commit-config.yaml  .projections.json  CONTRIBUTING.md  README.md  requirements.txt  setup.py
.github/workflows/: publish-gaarf-js.yaml  publish-gaarf-py.yaml  push-gaarf-js-to-github-packages.yaml  push-gaarf-py-to-github-packages.yaml  pytest.yaml
docs/: how-to-authenticate-ads-api.md  how-to-write-queries.md  simulating-data-with-gaarf.md
examples/: account_campaing_adgroup_mapping.sql
gcp/: README.md  setup.sh
gcp/create-gaarf-wf/: .npmrc  README.md  create-gaarf-wf  package-lock.json  package.json  tsconfig.json
gcp/create-gaarf-wf/src/: index.ts
gcp/functions/: .eslintrc.json  .gcloudignore  .gitignore  deploy.sh  p-deploy.sh.template  p-run-cf.sh.template  package-lock.json  package.json  setup.sh  tsconfig.json
gcp/functions/ads-fetcher/: .gcloudignore  .gitignore  deploy.sh  package-lock.json  (+3 more)
gcp/workflow/: deploy.sh  p-run-wf.sh.template  p-run.sh.template  p-schedule-wf.sh.template  setup.sh  workflow-ads.yaml  workflow.yaml  workflows.yaml
js/: .gitignore  .mocharc.json  .npmignore  .npmrc  CHANGELOG.md  Dockerfile  README.md  docker-build.sh  docker-run.sh  eslint.config.cjs  eslint.ignores.cjs  gaarf  gaarf-bq  package-lock.json  package.json  tsconfig.json
js/apps-script/: appsscript.json  license-config.json  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
js/examples/: library-usage-local.ts
js/src/: cli-bq.ts  cli.ts  grammar.peg  index.ts
py/: .coveragerc  Dockerfile  README.md  cli_bq.py  gaarf_cli.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
py/airflow_gaarf/: README.md  setup.py
py/airflow_gaarf/examples/: 01_gaarf_console_reader_console_writer.py  02_gaarf_file_reader_csv_writer.py  03_gaarf_read_directory_write_to_sqlalchemy.py  04_gaarf_read_solution_directory_and_config.py  example_query.sql
py/airflow_gaarf/src/: template_dag.py
py/airflow_gaarf/src/airflow_gaarf/: hooks.py  operators.py  utils.py
py/gaarf/: __init__.py  api_clients.py  api_handler.py  base_query.py  bq_executor.py  builtin_queries.py  exceptions.py  fetcher.py  parsers.py  post_processor.py  query_editor.py  query_executor.py  query_post_processor.py  report.py  report_fetcher.py  simulation.py  sql_executor.py  utils.py  writer.py
py/gaarf/cli/: bq.py  gaarf.py  simulator.py  sql.py  utils.py
py/gaarf/executors/: __init__.py  ads_executor.py  bq_executor.py  sql_executor.py
py/gaarf/io/: formatter.py  reader.py  writer.py
py/gaarf/io/writers/: abs_writer.py  bigquery_writer.py  console_writer.py  csv_writer.py  file_writer.py  json_writer.py  null_writer.py  sheets_writer.py  sqldb_writer.py
py/tests/end-to-end/: test_gaarf_cli_util.py
py/tests/end-to-end/data/: customer.sql  test-google-ads.yaml
py/tests/sql/: test_query.sql
py/tests/unit/: conftest.py  helpers.py  test_api_client.py  test_api_clients.py  test_base_query.py  test_bq_executor.py  test_builtin_queries.py  test_cli_utils.py  test_formatter.py  test_parsers.py  test_query_editor.py  test_query_executor.py  test_query_post_processor.py  test_reader.py  test_report.py  test_report_fetcher.py  test_simulation.py  test_sql_executor.py  test_utils.py  test_writer.py
py/tests/unit/cli/: test_utils.py
py/tests/unit/executors/: test_ads_executor.py  test_bq_executor.py  test_sql_executor.py
py/tests/unit/io/: test_formatter.py  test_reader.py  test_writer.py
py/tests/unit/io/writers/: conftest.py  test_bigquery_writer.py  test_console_writer.py  test_csv_writer.py  test_file_writer.py  test_json_writer.py  test_null_writer.py  test_sqldb_writer.py
runner/: api_clients.py  api_handler.py  arg_parser.py  fetcher.py  formatter.py  parsers.py  post_processor.py  query_editor.py  runner.py  utils.py  writer.py
runner-js/: .gitignore  .nycrc  README.md  cli-bin.js  package-lock.json  package.json
runner-js/src/: ads-query-editor.ts  ads-query-executor.ts  ads-row-parser.ts  api-client.ts  bq-writer.ts  cli.ts  csv-writer.ts  index.ts  types.ts  utils.ts
runner-js/test/: fixtures.ts  query-editor.tests.ts  query-executor.tests.ts
samples/bq-queries/: exchange_rates.sql
tests/sql/: test_query.sql
tests/unit/: test_parsers.py  test_query_editor.py  test_writer.py
(+76 files in other folders)
